Avoid work wrap in selection list.

--- a/webapp/src/steps/files.module.scss
+++ b/webapp/src/steps/files.module.scss
@@ -24,5 +24,6 @@
         height: fit-content;
         max-height: 100%;
         overflow: auto;
+        white-space: nowrap;
     }
 }
